为系统自带用户表更新字段并使用继承后的新表

--- a/.gitignore
+++ b/.gitignore
@@ -128,5 +128,6 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# pycharm .idea
+# -------->pycharm .idea | migrations
 meiduo_mail/.idea/*
+meiduo_mail/apps/users/migrations/*
