--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@ dmypy.json
 # -------->pycharm .idea | migrations
 meiduo_mail/.idea/*
 meiduo_mail/apps/users/migrations/*
+front_end_pc/.idea/*
